# red-queen-godel-machine

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: paper-mapping.md
examples/: custom_provider.py  llm_coevolution.py  quickstart_mock.py
examples/data/: anchor.jsonl  tasks.jsonl
src/rqgm/: __init__.py  archive.py  beta.py  cli.py  llm_providers.py  mock_providers.py  providers.py  runner.py  search.py
tests/: test_archive.py  test_beta.py  test_cli.py  test_llm_providers.py  test_paper_claims.py  test_search.py
